--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Wellspring Events</title>
   </head>
   <body>
     <div id="root"></div>
-		<script>window.csrf_token = '{{ frappe.session.csrf_token }}';</script>
+    <script>
+      window.csrf_token = "{{ frappe.session.csrf_token }}";
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
