placement-test: change email template

--- a/ws_event_page/www/placement_test_checkin.html
+++ b/ws_event_page/www/placement_test_checkin.html
@@ -186,14 +186,14 @@
                     $("#display-full-name").show();
                   }
                   enableInput();
-                  // reset_after_seconds(5);
+                  reset_after_seconds(5);
                 },
                 error: function () {
                   $("#display-full-name").text("Không tìm thấy Học sinh!");
                   $("#spinner").hide();
                   $("#display-full-name").show();
                   enableInput();
-                  // reset_after_seconds(5);
+                  reset_after_seconds(5);
                 },
               });
             }
