--- a/ws_event_page/www/wse_ac_checkin.html
+++ b/ws_event_page/www/wse_ac_checkin.html
@@ -11,7 +11,7 @@
 
     <style>
       body {
-        background-image: url("/assets/ws_event_page/images/NHTN_BG_01.jpg");
+        /* background-image loaded dynamically via loadBackgroundImages() */
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -77,9 +77,49 @@
           transform: rotate(360deg);
         }
       }
+
+      .announcement-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 40, 85, 0.95);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        padding: 20px;
+        box-sizing: border-box;
+      }
+      .announcement-text {
+        color: white;
+        font-size: 2.5rem;
+        text-align: center;
+        max-width: 800px;
+        line-height: 1.5;
+      }
+      .announcement-text.vietnamese {
+        margin-bottom: 30px;
+      }
+      .announcement-text.english {
+        color: #f0f0f0;
+        font-size: 2rem;
+      }
     </style>
   </head>
   <body>
+    <!-- Announcement overlay for closed events -->
+    <div id="announcement-overlay" class="announcement-overlay" style="display: none;">
+      <div class="announcement-text vietnamese">
+        Sự kiện hiện chưa mở.<br/>Vui lòng quay lại sau.
+      </div>
+      <div class="announcement-text english">
+        This event is not currently open.<br/>Please come back later.
+      </div>
+    </div>
+
     <input type="text" id="hidden-input" class="hidden-input" value="G1-122" />
     <div class="container">
       <div id="display-registration-number" class="display-title"></div>
@@ -95,8 +135,39 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
+      // Background image URLs (will be loaded from API)
+      let bgImages = {
+        main: "/assets/ws_event_page/images/NHTN_BG_01.jpg",
+        active: "/assets/ws_event_page/images/NHTN_BG_02.jpg",
+        idle: "/assets/ws_event_page/images/NHTN_BG_01.jpg",
+      };
+
+      // Load background images and event status from API
+      function loadBackgroundImages() {
+        $.ajax({
+          url: "/api/method/ws_event_page.api.event.admission_checkin.lead.get_checkin_page_images",
+          type: "GET",
+          success: function (r) {
+            if (r.message) {
+              bgImages = r.message;
+              // Apply main background after loading
+              $("body").css("background-image", "url('" + bgImages.main + "')");
+
+              // Check if NHTN event is open
+              if (!r.message.open_nhtn_event) {
+                $("#announcement-overlay").show();
+                $(".container").hide();
+              }
+            }
+          },
+        });
+      }
+
       $(document).ready(function () {
         let countdownInterval; // Declare countdownInterval
+
+        // Load dynamic backgrounds and check event status
+        loadBackgroundImages();
 
         window.onload = () => $("#hidden-input").focus();
         // window.addEventListener("click", () => $("#hidden-input").focus());
@@ -137,7 +208,7 @@
 
             $("body").css(
               "background-image",
-              "url('/assets/ws_event_page/images/NHTN_BG_02.jpg')"
+              "url('" + bgImages.active + "')"
             );
             $("#display-registration-number").text(inputValue);
             $("#display-registration-number").show();
@@ -223,7 +294,7 @@
                   $("#hidden-input").focus();
                   $("body").css(
                     "background-image",
-                    "url('/assets/ws_event_page/images/NHTN_BG_01.jpg')"
+                    "url('" + bgImages.idle + "')"
                   );
                 }
               }, 1000); // Update every second (1000 ms)
